spec/invalid/not_id.expr.interpreted
[
    (
        RuntimeError(
            TypeMismatch {
                expected: Bool,
                actual: Fn(Value) -> Value,
            },
        ),
        0..0,
    ),
]